# hwak_omp

./: README.md  anim_uk.py  diag.py  hwak_omp.py  run.py
pcvodeg/: CMakeLists.txt  pcvodeg.c  pcvodeg.h  pcvodeg.py
run1/: anim.py  run.py  specs.py
